# embedding-search-pipeline

./: .gitignore  PIPELINE.md  README.md  bench_pipeline.py  docker-compose.yml  export_onnx.py  generate_keywords.py  generate_products.py  index_to_es.py  index_to_qdrant.py  kserve_server.py  link_products_to_keywords.py  pyproject.toml  requirements.txt  search_qdrant.py  test_client.py
es_indexer/: README.md  __init__.py  indexer.py  pipeline.py
examples/: 01_kserve_embed_client.py  02_qdrant_indexer.py  03_es_indexer.py  04_integration_test.py
qdrant_indexer/: README.md  __init__.py  config.py  embedder.py  indexer.py  log.py  parquet_reader.py  pipeline.py  retry.py  searcher.py
